chore: grouping gndpoints in Swagger UI
